Fix: changed btn

--- a/src/app/dream-team/dream-team.component.html
+++ b/src/app/dream-team/dream-team.component.html
@@ -280,7 +280,7 @@
                   </div>
 
                   <p>
-                    <input (change)="postImage($event)" id="imgupload" class="btn tg-btn btn-lg btn-block" type="file">
+                    <input disabled (change)="postImage($event)" id="imgupload" class="btn tg-btn btn-lg btn-block" type="file">
                   </p>
 
                   <div class="row">
