--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -93,7 +93,7 @@
 
           <br>
 
-          <button (click)="updateUser()"  class="btn tg-btn btn-lg" > Update </button>
+          <button (click)="updateUser()"  class="btn tg-btn btn-lg" > Edit</button>
 
         </form>
       </div>
